allow banners bigger than 300x100 dimensions and option to allow other aspect ratio note: min-width and height of 300x100 is set on the .board-banner class. BOs could probably customise it to prevent content jumping if their banners are all the same aspect ratio close #310

--- a/gulp/res/css/style.css
+++ b/gulp/res/css/style.css
@@ -848,8 +848,8 @@ input:invalid, textarea:invalid {
 	margin: 10px;
 	max-width: 100%;
 	border: 1px solid var(--post-outline-color);
-	width: 300px;
-	height: 100px;
+	min-width: 300px;
+	min-height: 100px;
 }
 
 .board-description {
@@ -1350,6 +1350,11 @@ row.wrap.sb .col {
 
 	table.newstable td:nth-child(2), table.newstable th:nth-child(2) {
 		display: none;
+	}
+
+	.board-banner {
+		object-fit: contain;
+		height: unset;
 	}
 
 	.modal {
